[package]
name = "MediHelpAPI"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
serde = "1.0.2"
scraper = "0.24.0"
regex = "1.11"

[dependencies.rocket]
version = "0.5"
features = ["json"]

[dependencies.reqwest]
version = "0.12.23"
features = ["charset"]

[dependencies.chrono]
version = "0.4.42"
features = ["serde"]